--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: go build
         run: |
           for cmd in * ; do
-            CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -o $cmd.linux.amd64 -C $cmd -trimpath -ldflags ' -X main.VERSION='$VERSION
+            CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -C $cmd -o $cmd.linux.amd64 -trimpath -ldflags ' -X main.VERSION='$VERSION
           done
           ls -l -a
           tar -c -z -f ${{ github.event.repository.name }}.tar.gz *.linux.amd64
