--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -36,20 +36,23 @@ jobs:
             echo $cmd ___
             CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build -C $cmd -o ../$cmd.linux.amd64 -trimpath -ldflags ' -X main.VERSION='$VERSION
           done
-          ls -l -a
           tar -c -z -f ${{ github.event.repository.name }}.tar.gz *.linux.amd64
           ls -l -a
 
       - name: release notes
         run: |
           {
-          echo "curl -sSL https://github.com/shoce/${{ github.event.repository.name }}/releases/download/$VERSION/${{ github.event.repository.name }}.tar.gz | tar -t -z"
+          `echo "curl -sSL https://github.com/shoce/${{ github.event.repository.name }}/releases/download/$VERSION/${{ github.event.repository.name }}.tar.gz | tar -t -z"`
           echo
           echo /etc/os-release:
+          echo '```'
           cat /etc/os-release
+          echo '```'
           echo
           echo go version:
+          echo '```'
           go version
+          echo '```'
           } >release.notes..text
 
       - name: gh release
