--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,12 +44,12 @@ jobs:
           {
           echo '`curl -sSL https://github.com/shoce/${{ github.event.repository.name }}/releases/download/$VERSION/${{ github.event.repository.name }}.tar.gz | tar -t -z`'
           echo
-          echo /etc/os-release:
+          echo '/etc/os-release:'
           echo '```'
           cat /etc/os-release
           echo '```'
           echo
-          echo go version:
+          echo 'go version:'
           echo '```'
           go version
           echo '```'
