--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,7 +42,10 @@ jobs:
       - name: release notes
         run: |
           {
-          echo '`curl -sSL https://github.com/shoce/${{ github.event.repository.name }}/releases/download/$VERSION/${{ github.event.repository.name }}.tar.gz | tar -t -z`'
+          echo 'install:'
+          echo '```'
+          echo 'curl -sSL https://github.com/shoce/${{ github.event.repository.name }}/releases/download/$VERSION/${{ github.event.repository.name }}.tar.gz | tar -t -z'
+          echo '```'
           echo
           echo '/etc/os-release:'
           echo '```'
