--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -41,7 +41,7 @@ jobs:
           cd /tmp/${{ github.event.repository.name }}/
           for sl in ls lsr lt ll lr ; do ln -s -f l $sl ; done
           for sl in append ; do ln -s -f put $sl ; done
-          tar -c -z -f ${{ github.event.repository.name }}.tar.gz *
+          tar -c --gname '' --gid 0 --uname '' --uid 0 -z -f ${{ github.event.repository.name }}.tar.gz *
           echo '/tmp/${{ github.event.repository.name }}/:'
           ls -l -a
 
