--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -69,12 +69,18 @@ jobs:
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
-        run: gh release create ${{ env.VERSION }} /tmp/${{ github.event.repository.name }}/${{ github.event.repository.name }}.tar.gz --notes-file /tmp/${{ github.event.repository.name }}/release.notes..text
+        run: |
+          gh release create ${{ env.VERSION }} /tmp/${{ github.event.repository.name }}/${{ github.event.repository.name }}.tar.gz --notes-file /tmp/${{ github.event.repository.name }}/release.notes..text
 
       - name: gh release clean
         shell: bash
         env:
           GH_TOKEN: ${{ github.token }}
-        run: for tag in $( gh release list --order asc --limit 100 --json tagName --jq '.[] | select(.tagName | test("-")) | .tagName' | head -n -3 ) ; do gh release delete "$tag" -y ; done
+        run: |
+          for tag in $(
+            gh release list --order asc --limit 100 --json tagName --jq '.[] | select(.tagName | test("-")) | .tagName' | head -n -3
+          ) ; do
+            gh release delete "$tag" -y
+          ; done
 
 
