--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -42,6 +42,7 @@ jobs:
           cd /tmp/${{ github.event.repository.name }}/
           for sl in ls lsr lt ll lr ; do ln -s -f l $sl ; done
           for sl in append ; do ln -s -f put $sl ; done
+          for sl in err ; do ln -s -f out $sl ; done
           tar -c --numeric-owner --group=:0 --owner=:0 -z -f ${{ github.event.repository.name }}.tar.gz *
           echo '/tmp/${{ github.event.repository.name }}/:'
           ls -l -a
