--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -40,7 +40,7 @@ jobs:
           done
           echo
           cd /tmp/${{ github.event.repository.name }}/
-          for sl in ls lsr lt ll lr ; do ln -s -f l $sl ; done
+          for sl in ll ls lt lr llr lsr ; do ln -s -f l $sl ; done
           for sl in append ; do ln -s -f put $sl ; done
           for sl in err ; do ln -s -f out $sl ; done
           for sl in Aa ; do ln -s -f aA $sl ; done
