--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,10 +13,12 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
 
+      - uses: shoce/action-version@v1
+
       - name: version
         run: |
           BUILD_OS=ubuntu-24.04
-          VERSION=$( date '+%y.%m%d.%H%M' | sed 's/\.0*/./g' )-$BUILD_OS
+          VERSION=$VERSION-$BUILD_OS
           echo "BUILD_OS=$BUILD_OS" >> $GITHUB_ENV
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
