--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,10 +20,11 @@ jobs:
 
       - name: buildos
         run: |
-          BUILD_OS=ubuntu-24.04
+          BUILD_OS=ubuntu.24.04
           BUILD_ARCH=amd64
           VERSION=$VERSION-$BUILD_OS-$BUILD_ARCH
           echo "BUILD_OS=$BUILD_OS" >> $GITHUB_ENV
+          echo "BUILD_ARCH=$BUILD_ARCH" >> $GITHUB_ENV
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - uses: shoce/action-checkout@v1
@@ -101,10 +102,11 @@ jobs:
 
       - name: buildos
         run: |
-          BUILD_OS=ubuntu-24.04
+          BUILD_OS=ubuntu.24.04
           BUILD_ARCH=arm64
           VERSION=$VERSION-$BUILD_OS-$BUILD_ARCH
           echo "BUILD_OS=$BUILD_OS" >> $GITHUB_ENV
+          echo "BUILD_ARCH=$BUILD_ARCH" >> $GITHUB_ENV
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - uses: shoce/action-checkout@v1
